// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field.Password for Resource.Form Empty 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <div
      class="control is-clearfix"
    >
      <input
        autocomplete="on"
        class="input"
        type="password"
      />
       
      <!---->
       
      <!---->
       
      <!---->
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Password for Resource.Form Empty and readonly 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <div>
      <span>
        
      </span>
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Password for Resource.Form With value, label and icon 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <label
      class="label"
    >
      My field label
    </label>
     
    <div
      class="control has-icons-left is-clearfix"
    >
      <input
        autocomplete="on"
        class="input"
        maxlength="10"
        placeholder="An explicit placeholder"
        type="password"
      />
       
      <span
        class="icon is-left"
      >
        <i
          class="fa fa-user fa-lg"
        />
      </span>
       
      <!---->
       
      <small
        class="help counter is-invisible"
      >
        
            7 / 10
        
      </small>
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Password for Resource.Form With value, label, readonly 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <label
      class="label"
    >
      My field label
    </label>
     
    <div>
      <span>
        *******
      </span>
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Password for Resource.Form With value, label, readonly and slot 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <label
      class="label"
    >
      My field label
    </label>
     
    <div>
      <div>
        A value 
        <br />
         *******
      </div>
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Password for Resource.Form With value, label, reveal and icon 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <label
      class="label"
    >
      My field label
    </label>
     
    <div
      class="control has-icons-left has-icons-right is-clearfix"
    >
      <input
        autocomplete="on"
        class="input"
        maxlength="10"
        placeholder="An explicit placeholder"
        type="password"
      />
       
      <span
        class="icon is-left"
      >
        <i
          class="fa fa-user fa-lg"
        />
      </span>
       
      <span
        class="icon is-right has-text-primary is-clickable"
      >
        <i
          class="fa fa-eye fa-lg"
        />
      </span>
       
      <small
        class="help counter is-invisible"
      >
        
            7 / 10
        
      </small>
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Password for Resource.List Empty 1`] = `
<div>
  <span>
    
  </span>
</div>
`;

exports[`Field.Password for Resource.List With value 1`] = `
<div>
  <span>
    *******
  </span>
</div>
`;

exports[`Field.Password for Resource.List With value and slot 1`] = `
<div>
  <div>
    A value 
    <br />
     *******
  </div>
</div>
`;

exports[`Field.Password for Resource.Thumbnail Empty 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <span>
      
    </span>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Password for Resource.Thumbnail Empty 2`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <span>
      
    </span>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Password for Resource.Thumbnail With value 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <span>
      *******
    </span>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Password for Resource.Thumbnail With value 2`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <span>
      *******
    </span>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Password for Resource.Thumbnail With value and slot 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <div>
      A value 
      <br />
       *******
    </div>
     
    <!---->
  </div>
</span>
`;
